Added error handling, history.