@@ -5,7 +5,6 @@ import ca.bc.gov.educ.api.batchgraduation.service.TaskSchedulingService;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.batch.core.BatchStatus;
 import org.springframework.batch.core.JobExecution;
 import org.springframework.batch.core.JobParameters;
 import org.springframework.batch.item.ExecutionContext;
@@ -33,82 +32,62 @@ public class UserReqPsiDistributionRunCompletionNotificationListener extends Bas
 		this.taskSchedulingService = taskSchedulingService;
 		this.supportListener = supportListener;
 	}
+    
+    @Override
+    public void afterJob(JobExecution jobExecution) {
+		long elapsedTimeMillis = new Date().getTime() - jobExecution.getStartTime().getTime();
+		LOGGER.info(LOG_SEPARATION);
+		LOGGER.info("PSI Distribution Job completed in {} s with jobExecution status {}", elapsedTimeMillis/1000, jobExecution.getStatus());
+		JobParameters jobParameters = jobExecution.getJobParameters();
+		ExecutionContext jobContext = jobExecution.getExecutionContext();
+		Long jobExecutionId = jobExecution.getId();
+		String status = jobExecution.getStatus().toString();
+		Date startTime = jobExecution.getStartTime();
+		Date endTime = jobExecution.getEndTime();
+		String jobTrigger = jobParameters.getString(EducGradBatchGraduationApiConstants.JOB_TRIGGER);
+		String jobType = jobParameters.getString(EducGradBatchGraduationApiConstants.JOB_TYPE);
+		String transmissionType = jobParameters.getString(EducGradBatchGraduationApiConstants.TRANSMISSION_TYPE);
+		String studentSearchRequest = jobParameters.getString(EducGradBatchGraduationApiConstants.SEARCH_REQUEST);
 
-	@Override
-	public void beforeJob(JobExecution jobExecution) {
-		// Create entry in job history table
-		PsiDistributionSummaryDTO summaryDTO = (PsiDistributionSummaryDTO)jobExecution.getExecutionContext().get("psiDistributionSummaryDTO");
+		String userScheduledId = jobParameters.getString(EducGradBatchGraduationApiConstants.USER_SCHEDULED);
+		if(userScheduledId != null) {
+			taskSchedulingService.updateUserScheduledJobs(userScheduledId);
+		}
+
+		PsiDistributionSummaryDTO summaryDTO = (PsiDistributionSummaryDTO)jobContext.get("psiDistributionSummaryDTO");
 		if(summaryDTO == null) {
 			summaryDTO = new PsiDistributionSummaryDTO();
 			summaryDTO.initializeCredentialCountMap();
 		}
-		processBatchJobHistory(
-				summaryDTO,
-				jobExecution.getId(),
-				jobExecution.getStatus().toString(),
-				jobExecution.getJobParameters().getString(EducGradBatchGraduationApiConstants.JOB_TRIGGER),
-				jobExecution.getJobParameters().getString(EducGradBatchGraduationApiConstants.JOB_TYPE),
-				jobExecution.getStartTime(),
-				jobExecution.getEndTime(),
-				buildJobParametersDTO(
-						jobExecution.getJobParameters().getString(EducGradBatchGraduationApiConstants.JOB_TYPE),
-						jobExecution.getJobParameters().getString(EducGradBatchGraduationApiConstants.SEARCH_REQUEST),
-						TaskSelection.URPDBJ,
-						jobExecution.getJobParameters().getString(EducGradBatchGraduationApiConstants.TRANSMISSION_TYPE))
-		);
-	}
-    
-    @Override
-    public void afterJob(JobExecution jobExecution) {
-    	if (jobExecution.getStatus() == BatchStatus.COMPLETED) {
-	    	long elapsedTimeMillis = new Date().getTime() - jobExecution.getStartTime().getTime();
-			LOGGER.info(LOG_SEPARATION);
-	    	LOGGER.info("PSI Distribution Job completed in {} s with jobExecution status {}", elapsedTimeMillis/1000, jobExecution.getStatus());
-	    	JobParameters jobParameters = jobExecution.getJobParameters();
-			ExecutionContext jobContext = jobExecution.getExecutionContext();
-			Long jobExecutionId = jobExecution.getId();
-			String status = jobExecution.getStatus().toString();
-			Date startTime = jobExecution.getStartTime();
-			Date endTime = jobExecution.getEndTime();
-			String jobTrigger = jobParameters.getString(EducGradBatchGraduationApiConstants.JOB_TRIGGER);
-			String jobType = jobParameters.getString(EducGradBatchGraduationApiConstants.JOB_TYPE);
-			String transmissionType = jobParameters.getString(EducGradBatchGraduationApiConstants.TRANSMISSION_TYPE);
-			String studentSearchRequest = jobParameters.getString(EducGradBatchGraduationApiConstants.SEARCH_REQUEST);
 
-			String userScheduledId = jobParameters.getString(EducGradBatchGraduationApiConstants.USER_SCHEDULED);
-			if(userScheduledId != null) {
-				taskSchedulingService.updateUserScheduledJobs(userScheduledId);
-			}
+		// display Summary Details
+		LOGGER.info(" Records read   : {}", summaryDTO.getReadCount());
+		LOGGER.info(" Processed count: {}", summaryDTO.getProcessedCount());
+		LOGGER.info(LOG_SEPARATION_SINGLE);
+		LOGGER.info("Errors:{}", summaryDTO.getErrors().size());
 
-			PsiDistributionSummaryDTO summaryDTO = (PsiDistributionSummaryDTO)jobContext.get("psiDistributionSummaryDTO");
-			if(summaryDTO == null) {
-				summaryDTO = new PsiDistributionSummaryDTO();
-				summaryDTO.initializeCredentialCountMap();
-			}
+		String jobParametersDTO = buildJobParametersDTO(jobType, studentSearchRequest, TaskSelection.URPDBJ, transmissionType);
 
-			// display Summary Details
-			LOGGER.info(" Records read   : {}", summaryDTO.getReadCount());
-			LOGGER.info(" Processed count: {}", summaryDTO.getProcessedCount());
-			LOGGER.info(LOG_SEPARATION_SINGLE);
-			LOGGER.info("Errors:{}", summaryDTO.getErrors().size());
 
-			String jobParametersDTO = buildJobParametersDTO(jobType, studentSearchRequest, TaskSelection.URPDBJ, transmissionType);
+		LOGGER.info(LOG_SEPARATION_SINGLE);
+		PsiDistributionSummaryDTO finalSummaryDTO = summaryDTO;
+		summaryDTO.getCredentialCountMap().forEach((key, value) -> LOGGER.info(" {} count   : {}", key, finalSummaryDTO.getCredentialCountMap().get(key)));
 
-			// save batch job & error history
-			processBatchJobHistory(summaryDTO, jobExecutionId, status, jobTrigger, jobType, startTime, endTime, jobParametersDTO);
-			LOGGER.info(LOG_SEPARATION_SINGLE);
-			PsiDistributionSummaryDTO finalSummaryDTO = summaryDTO;
-			summaryDTO.getCredentialCountMap().forEach((key, value) -> LOGGER.info(" {} count   : {}", key, finalSummaryDTO.getCredentialCountMap().get(key)));
-
-			ResponseObj obj = restUtils.getTokenResponseObject();
-			LOGGER.info("Starting Report Process --------------------------------------------------------------------------");
+		ResponseObj obj = restUtils.getTokenResponseObject();
+		LOGGER.info("Starting Report Process --------------------------------------------------------------------------");
+		try {
 			processGlobalList(summaryDTO.getGlobalList(),jobExecutionId,summaryDTO.getMapDist(),obj.getAccess_token(),transmissionType);
-			LOGGER.info(LOG_SEPARATION);
+		} catch (Exception e) {
+			LOGGER.error(e.getLocalizedMessage());
+			status = "FAILED";
 		}
+		// save batch job & error history
+		processBatchJobHistory(summaryDTO, jobExecutionId, status, jobTrigger, jobType, startTime, endTime, jobParametersDTO);
+		LOGGER.info(LOG_SEPARATION);
     }
 
 	private void processGlobalList(List<PsiCredentialDistribution> cList, Long batchId, Map<String, DistributionPrintRequest> mapDist, String accessToken,String transmissionType) {
-		List<String> uniquePSIList = cList.stream().map(PsiCredentialDistribution::getPsiCode).distinct().collect(Collectors.toList());
+		List<String> uniquePSIList = cList.stream().map(PsiCredentialDistribution::getPsiCode).distinct().toList();
 		uniquePSIList.forEach(upl->{
 			List<PsiCredentialDistribution> yed4List = cList.stream().filter(scd -> scd.getPsiCode().compareTo(upl) == 0).collect(Collectors.toList());
 			supportListener.psiPrintFile(yed4List,batchId,upl,mapDist);
